Add Room template class as ListView

--- a/templates/rooms/room_list.html
+++ b/templates/rooms/room_list.html
@@ -12,7 +12,7 @@ Room List
 
 <div>
     <h2>※Room List</h2>
-    {% for room in rooms %}
+    {% for room in object_list %}
     <li>{{room.name}}</li>
     {% endfor %}
 </div>
