--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,11 +1,11 @@
 <header>
     <ul>
         <li>
-            <a href="/">Home</a>
+            <a href="{% url 'core:home' %}">Home</a>
         </li>
 
         <li>
-            <a href="/rooms">Rooms</a>
+            <a href="{% url 'users:login' %}">Login</a>
         </li>
 
         <li>
