--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,6 +6,7 @@ Log In
 
 {% block content %}
 <form method="POST" action={% url 'users:login' %}>
+    {% csrf_token %}
     {{form.as_p}}
     <button>Login</button>
 </form>
