--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -9,6 +9,10 @@
         <li>
             <a href="{% url 'users:login' %}">Login</a>
         </li>
+        <li>
+            <a href="{% url 'users:signup' %}">Signup</a>
+        </li>
+
         {% endif %}
     </ul>
 </header>
